--- a/gameoflife-web/pom.xml
+++ b/gameoflife-web/pom.xml
@@ -162,16 +162,16 @@
             <artifactId>fest-assert</artifactId>
             <version>1.4</version>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.6.1</version>
-        </dependency>-->
-        <!--<dependency>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.6.1</version>
-        </dependency>-->
+        </dependency>
 
     </dependencies>
 </project>
