--- a/pom.xml
+++ b/pom.xml
@@ -300,75 +300,7 @@
                         <artifactId>maven-site-plugin</artifactId>
                         <version>3.3</version>
                         <configuration>
-                            <reportPlugins>
-                                <plugin>
-                                    <artifactId>maven-project-info-reports-plugin</artifactId>
-                                    <version>2.7</version>
-                                </plugin>
-                                <plugin>
-                                    <groupId>org.jacoco</groupId>
-                                    <artifactId>jacoco-maven-plugin</artifactId>
-                                    <version>0.7.2.201409121644</version>
-                                </plugin>
-                                <plugin>
-                                    <groupId>org.apache.maven.plugins</groupId>
-                                    <artifactId>maven-checkstyle-plugin</artifactId>
-                                    <version>3.0.1</version>
-                                    <!--<configuration>-->
-                                    <!--<configLocation>gol-checkstyle.xml</configLocation>-->
-                                    <!--</configuration>-->
-                                </plugin>
-                                <plugin>
-                                    <groupId>org.apache.maven.plugins</groupId>
-                                    <artifactId>maven-pmd-plugin</artifactId>
-                                    <version>3.2</version>
-                                    <configuration>
-                                        <targetJdk>1.6</targetJdk>
-                                        <aggregate>true</aggregate>
-                                        <format>xml</format>
-                                        <rulesets>
-                                            <ruleset>/pmd-rules.xml</ruleset>
-                                        </rulesets>
-                                        <!-- CPD options -->
-                                        <minimumTokens>20</minimumTokens>
-                                        <ignoreIdentifiers>true</ignoreIdentifiers>
-                                    </configuration>
-                                </plugin>
-                                <plugin>
-                                    <groupId>org.codehaus.mojo</groupId>
-                                    <artifactId>findbugs-maven-plugin</artifactId>
-                                    <version>2.4.0</version>
-                                    <configuration>
-                                        <effort>Max</effort>
-                                        <xmlOutput>true</xmlOutput>
-                                    </configuration>
-                                </plugin>
-                                <plugin>
-                                    <artifactId>maven-javadoc-plugin</artifactId>
-                                    <version>2.9.1</version>
-                                    <configuration>
-                                        <source>1.6</source>
-                                        <doclet>
-                                            gr.spinellis.umlgraph.doclet.UmlGraphDoc
-                                        </doclet>
-                                        <docletArtifact>
-                                            <groupId>gr.spinellis</groupId>
-                                            <artifactId>UmlGraph</artifactId>
-                                            <version>4.6</version>
-                                        </docletArtifact>
-                                        <additionalparam>
-                                            -inferrel -inferdep -hide java.* -collpackages
-                                            java.util.* -attributes -operations
-                                            -enumerations -enumconstants
-                                        </additionalparam>
-                                    </configuration>
-                                </plugin>
-                                <plugin>
-                                    <groupId>org.apache.maven.plugins</groupId>
-                                    <artifactId>maven-jxr-plugin</artifactId>
-                                    <version>2.4</version>
-                                </plugin>
-                            </reportPlugins>
+
                         </configuration>
                         <dependencies>
                             <dependency>
@@ -422,9 +354,76 @@
             <reporting>
                 <plugins>
                     <plugin>
+                        <artifactId>maven-project-info-reports-plugin</artifactId>
+                        <version>2.7</version>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <version>0.7.2.201409121644</version>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-checkstyle-plugin</artifactId>
+                        <version>3.0.1</version>
+                        <!--<configuration>-->
+                        <!--<configLocation>gol-checkstyle.xml</configLocation>-->
+                        <!--</configuration>-->
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-pmd-plugin</artifactId>
+                        <version>3.2</version>
+                        <configuration>
+                            <targetJdk>1.6</targetJdk>
+                            <aggregate>true</aggregate>
+                            <format>xml</format>
+                            <rulesets>
+                                <ruleset>/pmd-rules.xml</ruleset>
+                            </rulesets>
+                            <!-- CPD options -->
+                            <minimumTokens>20</minimumTokens>
+                            <ignoreIdentifiers>true</ignoreIdentifiers>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>findbugs-maven-plugin</artifactId>
+                        <version>2.4.0</version>
+                        <configuration>
+                            <effort>Max</effort>
+                            <xmlOutput>true</xmlOutput>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.9.1</version>
+                        <configuration>
+                            <source>1.6</source>
+                            <doclet>
+                                gr.spinellis.umlgraph.doclet.UmlGraphDoc
+                            </doclet>
+                            <docletArtifact>
+                                <groupId>gr.spinellis</groupId>
+                                <artifactId>UmlGraph</artifactId>
+                                <version>4.6</version>
+                            </docletArtifact>
+                            <additionalparam>
+                                -inferrel -inferdep -hide java.* -collpackages
+                                java.util.* -attributes -operations
+                                -enumerations -enumconstants
+                            </additionalparam>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jxr-plugin</artifactId>
+                        <version>2.4</version>
+                    </plugin>
+                    <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>cobertura-maven-plugin</artifactId>
-                        <version>1.16</version>
+                        <version>${cobertura.version}</version>
                         <configuration>
                             <formats>
                                 <format>html</format>
